[package]
name = "actor-framework-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
ractor = "0.15.8"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
tracing = { version = "0.1", features = ["attributes"] }

tracing-glog = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
